# sample_project

./: .conda_env.yaml  .gitignore  README.md  pyproject.toml
.github/workflows/: lint-ruff.yaml  test.yaml
sample/: sample_computation.py  sample_file.py
sample_project/: sample_file.py
tests/: test_sample_computation.py
